update config yml

--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Dynamic Spatial Ecology and Biogeography Lab
-email: tkeitt@utexas.edu
-description: >- Academic website
-twitter_username: username
-github_username: keittlab
-minimal_mistakes_skin: default
+title: "Dynamic Spatial Ecology and Biogeography Lab"
+email: "tkeitt@utexas.edu"
+description: > 
+  Academic website
+twitter_username: "username"
+github_username: "keittlab"
+minimal_mistakes_skin: "default"
 search: true
 
 # Build settings
