--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ twitter_username: "username"
 github_username: "keittlab"
 minimal_mistakes_skin: "default"
 search: true
+repository: keittlab/website
 
 # Build settings
 markdown: kramdown
